# relistats

./: .coveragerc  .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  README.rst  cspell.json  pyproject.toml  setup.cfg
.github/workflows/: publish-docker.yml  test.yml
docs/: README.md
docs/source/: background.rst  conf.py  index.rst  modules.rst  relistats.rst  usage.rst
example/: 01_reliability_confidence.ipynb  Pipfile  cspell.json  explore_median_confidence.ipynb  explore_percentile.ipynb  explore_quantile.ipynb  explore_tolerance_interval.ipynb
examples/: 01_reliability_confidence.ipynb  README.md  paper01_reliability_statistics.ipynb
notebooks/: assurance.ipynb
relistats/: __init__.py  __main__.py  binom_fin.py  binomial.py  intervals.py  percentile.py  quantile.py
test/: test_binom_fin.py  test_binomial.py  test_intervals.py  test_percentile.py  test_quantile.py  test_relistats.py
