[metadata]
name = relistats
version = 0.5.0
description = Reliability Statistics
long_description = file: README.rst
author = Sanjay Joshi
author_email = sanjaymjoshi@iitbombay.org
url = https://github.com/sanjaymjoshi/relistats
license = MIT License

[options]
packages = find:
python_requires = >=3.7
install_requires =
    scipy

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=relistats,test
ignore_missing_imports=true

[tool:pytest]
testpaths=test/
